# simple-cython-example

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  timings.py
.github/workflows/: python-ci.yml
cython_example_proj/: __init__.py  profile.py  wrapped.c  wrapped.pyx
cython_example_proj/lib/: cfunc.c  cfunc.h
cython_example_proj/test/: test_cython_examples.py
